Refactor: Improve YAML formatting and align tag naming conventions
Simplified Jinja2 templates by reducing unnecessary line breaks, adjusted tags for consistency (`disaster-recovery` -> `disasterrecovery`), and added a Checkov skip directive for Molecule's MinIO container.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -32,7 +32,7 @@ galaxy_info:
     - zabbix
     - monitoring
     - cron
-    - disaster-recovery
+    - disasterrecovery
     - restore
 
 dependencies: []
