--- a/vars/main.yml
+++ b/vars/main.yml
@@ -13,16 +13,11 @@
 _duplicity_detected_backend: >-
   {%- set url = duplicity_destination | default('file://') -%}
   {%- if url.startswith('boto3+s3://') or url.startswith('s3+http') or url.startswith('s3://') -%}
-  s3
-  {%- elif url.startswith('sftp://') or url.startswith('scp://') -%}
-  sftp
-  {%- elif url.startswith('file://') or url.startswith('/') -%}
-  file
-  {%- elif url.startswith('ftp://') -%}
-  ftp
-  {%- else -%}
-  {{ url | regex_search('^([a-z0-9]+)://') | regex_replace('://$', '') | default('file') }}
-  {%- endif -%}
+  s3{%- elif url.startswith('sftp://') or url.startswith('scp://') -%}
+  sftp{%- elif url.startswith('file://') or url.startswith('/') -%}
+  file{%- elif url.startswith('ftp://') -%}
+  ftp{%- else -%}
+  {{ url | regex_search('^([a-z0-9]+)://') | regex_replace('://$', '') | default('file') }}{%- endif -%}
 
 # ------------------------------------------------------------
 # Cron Schedule Presets
@@ -85,10 +80,8 @@ _duplicity_exclude_file: "{{ duplicity_config_dir }}/exclude-patterns"
 
 _duplicity_encryption_flags: >-
   {% if duplicity_encryption_method == 'none' -%}
-  --no-encryption
-  {%- elif duplicity_encryption_method == 'gpg' and duplicity_gpg_key -%}
-  --encrypt-key {{ duplicity_gpg_key }}{% if duplicity_sign_key %} --sign-key {{ duplicity_sign_key }}{% endif %}
-  {%- endif %}
+  --no-encryption{%- elif duplicity_encryption_method == 'gpg' and duplicity_gpg_key -%}
+  --encrypt-key {{ duplicity_gpg_key }}{% if duplicity_sign_key %} --sign-key {{ duplicity_sign_key }}{% endif %}{%- endif %}
 
 # ------------------------------------------------------------
 # S3 Flags
@@ -96,6 +89,4 @@ _duplicity_encryption_flags: >-
 
 _duplicity_s3_flags: >-
   {%- if _duplicity_detected_backend | trim == 's3' -%}
-  {%- if duplicity_s3_endpoint_url %}--s3-endpoint-url {{ duplicity_s3_endpoint_url }}{% endif %}
-  {%- if duplicity_s3_region_name | default('') %} --s3-region-name {{ duplicity_s3_region_name }}{% endif %}
-  {%- endif -%}
+  {%- if duplicity_s3_endpoint_url %}--s3-endpoint-url {{ duplicity_s3_endpoint_url }}{% endif %}{%- if duplicity_s3_region_name | default('') %} --s3-region-name {{ duplicity_s3_region_name }}{% endif %}{%- endif -%}
