Refactor: Remove unused python3-boto package and update Docker images to debian-bookworm and debian-trixie

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,8 +69,8 @@ jobs:
         distro:
           - ubuntu-jammy
           - ubuntu-noble
-          - debian-bullseye
           - debian-bookworm
+          - debian-trixie
 
     steps:
       - name: Checkout repository
