--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'
   pull_request:
     branches:
       - main
@@ -117,3 +119,33 @@ jobs:
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
+
+  publish:
+    name: Publish to Ansible Galaxy
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+      - security
+      - molecule
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install Ansible
+        run: pip install ansible-core
+
+      - name: Publish to Ansible Galaxy
+        run: >
+          ansible-galaxy role import
+          --api-key ${{ secrets.GALAXY_API_KEY }}
+          --role-name duplicity
+          --no-wait
+          oxess ansible-backup-duplicity
+        env:
+          ANSIBLE_GALAXY_SERVER: https://galaxy.ansible.com
